# mrh

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  pyscf-forge_version.txt  pyscf_version.txt  setup.py
.github/workflows/: ci.yml  cmake_make.sh  python-package.yml  test.sh
debug/fci/: 1414.py  lih_casscf25_sto3g.py
debug/lasscf/: async_input.py  butadiene.xyz  c2h6n4_struct.py  debug_lasscf_async.py  debug_lasscf_async_crunch.py  debug_lassi_soc.py
debug/lassi/: debug_22.py  debug_4frag.py  debug_c2h4n4.py  debug_c2h4n4_lassis_slow.py  debug_cs_tetrahedron.dev.out  debug_cs_tetrahedron.nolinequiv.out  debug_cs_tetrahedron.py  debug_cs_tetrahedron_slow.py  debug_lassis_targets_slow.py  debug_lassis_timing.py  debug_opt57_slow.py  debug_soc.py  debug_tetrahedron.py  debug_tetrahedron_slow.py
debug/mcpdft/: debug_mcpdft_api.py  debug_otfnal.py  debug_prelassi_pdft.py  debug_scf.py  lih_ftlda22_sto3g.py  lih_ftpbe22_sto3g.py  lih_tpbe22_sto3g.py  proc_v_err.py
debug/nacs/: debug_cmspdft.py  debug_nacs.py
dmet/: __init__.py  dmet.py  localintegrals.py  localintegrals_hubbard.py  pyscf_casscf.py  pyscf_cc.py  pyscf_mp2.py  pyscf_rhf.py  pyscf_uhf.py  qcdmethelper.py  testing.py
examples/: HeH2_scan.py  HeH2_struct.py  Me2N2-DMET-scan.py  Me2N2_struct.py
examples/c2h4n4/: lasscf10_calc.py  lasscf8_calc.py
examples/c2h6n4/: casdmet_calc.py  lasscf_calc.py
examples/contracted_ano_basis/: general_ano_rcc_basis.py
examples/debugging/: newton_casscf_gradients.py
examples/dkh/: dkhscalar.py  run_dkh.py
examples/dmetandpdmet/: 01_dmet_cas.py  02_dmet_pdft.py  03_dmet_nevpt2.py  04_pdmet_cas.py  05_pdmet_pdft.py  06_pdmet_nevpt2.py  07_pdmet_as_orbital_plot.py  08_pdmet_with_df.py  09_mspdft_dmet.py  10_dmet_soc.py  pdmettest.py
examples/gpu/: example_profile.py  new_analyzer.py  submission_script_for_polaris.sh
examples/guessorb/: get_initial_orbital.py  get_ivo.py
examples/laspdft/: C2.0.LASPDFT.py  C2.xyz  H2molecules.py  c2h4n4_dpd_laspdft.py  c2h4n4_laspdft.py  c2h4n4_presi_laspdft.py  c2h4n4_sa_laspdft.py  c2h4n4_si_laspdft.py  debug_prelassi_pdft.py  lassi_lpdft.py
examples/lasscf/: c2h4n4_rdm.py  debug_tz_df_o1.py  preserving_rohf_reference.py
examples/lasscf_async/: c2h4n4_equil_lasscf1010_631g.py  c2h4n4_str_lasscf1010_631g.py  c2h6n4_lasscf88_sto3g.py  h4_631g.py  using_older_kernel.py
examples/lasscf_testing/: c2h4n4_spin.py  c2h6n4_scan.py
examples/lassi/: approx_lassis.py  c2h4n4_631g.py  c2h4n4_631g_w_symmetry.py  c2h4n4_lassi_631g.py  c2h4n4_lassirq_631g.py  c2h4n4_lassis_631g.py  cr2o3n6h21_lassis66_smallbasis.py  lassis_chk.py
examples/lasucc/: c4h6_afm_stretched_631g_frzci.py  c4h6_equil_631g.py  c4h6_fm_stretched_631g_frzci.py  c4h6_stretched_631g.py  c4h6_stretched_631g_1shot.py  c4h6_stretched_631g_frzci.py  h4_afm_sto3g_frzci.py  h4_fm_sto3g_frzci.py  h4_sto3g.py  h4_sto3g_1shot.py  h4_sto3g_frzci.py  h4_sto3g_lasuscc.py
examples/lasuscc/: h4_sto3g.py
examples/mcdcft/: 01_h2_potential_curve.py  02_h2_potential_curve_restart.py
examples/mcpdft/: Catom_spinstates_pvtz.py  H2_PES_decomp_tPBE.py  H2_PES_hybrid_tPBE.py  h2co_sa2_tpbe66_631g_grad0.py  h2co_sa2_tpbe66_631g_grad1.py  h2co_sa2_tpbe66_631g_opt0.py  h2co_sa2_tpbe66_631g_opt1.py  h2co_tpbe66_631g_grad.py  h2co_tpbe66_631g_opt.py  h2co_tpbe66_def2svp_edipole.py
examples/mcscf_mcpdft_dferi_geomopts/: h2co_casscf66_631g_grad.py  h2co_casscf66_631g_opt.py  h2co_ftpbe66_631g_grad.py  h2co_sa2_casscf66_631g_grad.py  h2co_sa2_casscf66_631g_opt.py  h2co_sa2_casscf66_631g_symm_grad.py  h2co_sa2_casscf66_631g_symm_opt.py  h2co_sa2_tpbe66_631g_grad.py  h2co_sa2_tpbe66_631g_opt.py  h2co_sa2_tpbe66_631g_symm_grad.py  h2co_sa2_tpbe66_631g_symm_opt.py  h2co_tpbe66_631g_grad.py  h2co_tpbe66_631g_opt.py
examples/me2n2/: casdmet1e_calc.py  casdmet_calc.py  lasscf_calc.py  sccasdmet_calc.py
examples/molcas2pyscf/: h2o.py  h2o.rasscf.h5  h2o.xyz
examples/mspdft/: LiH_cms2ftlda22_sto3g.py
examples/nacs/: LiH_cms2ftlda22_sto3g.py  LiH_sa2casscf22_sto3g.py
examples/pbc/: 00-simple-casci.py  01-cplxFCI.py  02-cplxCSFFCI.py  03-cplxCASCI.py  04-k-CASSCF.py  05-cplx-fci_opt.py  06-cplx-DMRG-k-CASSCF.py  casci_kmf.py  lasci_gamma_point.py  pdft_gamma_point.py
examples/sa_si_lasscf/: automatic_singles.py  c2h4n4_631g.py  cr2o3n6h21_lassis66_smallbasis.py
examples/sacasscf_gradients/: h2co_sa2_casscf66_631g_grad0.py  h2co_sa2_casscf66_631g_grad1.py  h2co_sa2_casscf66_631g_opt0.py  h2co_sa2_casscf66_631g_opt1.py
examples/sipdft/: LiH_cms2ftlda22_sto3g.py  LiH_cms2ftlda22_sto3g_df.py
exploratory/citools/: addons.py  am_lasci_ominus1.py  dms.py  fockspace.py  grad.py  grad_anti.py  las_usccsd_grad.py  las_usccsd_grad_originalsv.py  lasci_ominus1.py  spin.py  sv_lasci_ominus1.py
exploratory/lastools/: casvec.py
gpu/: Makefile  README.md  device.cpp  device_host.cpp  pm_cuda.cpp  pm_cuda.h  pm_host.h
gpu/lib/: Makefile  (+10 more)
lib/: CMakeLists.txt  csfstring.c  dkh.f90  fblas.h  fsucc.c  helper.py  misc.py  nr_numint.c  patch_pyscf_sys_info.py  pbc_fci_rdms.c  sparsedf.c
lib/lassi/: CMakeLists.txt  hsi.c  rdm.c  slatercondon.c
lib/pbclas/: CMakeLists.txt  pbc_fci_contract_nosym.c  pbc_fci_contract_opt.c  pbc_fci_contract_spin0.c  pbc_fci_rdms.c
mcpdft_in_pyscf/: mcpdft.py  otpd.py  transfnal.py
my_dmet/: __init__.py  debug.py  fragments.py  localintegrals.py  main_object.py  orbital_hessian.py  pyscf_casscf.py  pyscf_fci.py  pyscf_mp2.py  pyscf_rhf.py  pyscf_uhf.py  qcdmethelper.py  rhf.py  testing.py
my_drudge/: PartActvHoleDrudge.py
scratchbook/: polyene_dfhf_631g.py
util/: __init__.py  basis.py  bigdim.py  chemistry.py  io.py  la.py  my_math.py  my_scipy.py  params.py  rdm.py  tensors.py
(+680 files in other folders)
